welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  (isMorning,isMom,IsAsleep) match {
    case (true,false,true) => return false
    case (false,false,true) => return false
    case (true,true,true) => return false
    case (false,true,true) => return false
    case (true,false,false) => return true
    case (false,true,false) => return true
    case (true,true,false) => return true
    case (false,false,false) => return true
  }
}